Instaladas dependencias necesarias, creado layout básico

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,1 +1,9 @@
-<p>layout works!</p>
+<div class="row">
+  <div class="col-12 col-lg-4">
+    <div class="d-flex">
+      <button class="btn btn-primary">
+        Press me!
+      </button>
+    </div>
+  </div>
+</div>
