--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,7 +1,10 @@
 <div class="row">
   <div class="col-12 col-lg-4">
     <div class="d-flex">
-      <button class="btn btn-primary">
+      <button class="btn btn-primary"
+              [swal]="{ title: 'Save file as...', input: 'text', showCancelButton: true }"
+              (confirm)="saveFile($event)"
+              (deny)="foo()">
         Press me!
       </button>
     </div>
